Bug 284789 - Does not remember mail transport
Summary: Does not remember mail transport
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.7
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-10-23 15:09 UTC by Albert Astals Cid
Modified: 2011-11-14 21:01 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.7.4
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Albert Astals Cid 2011-10-23 15:09:49 UTC
Version:           4.7 (using KDE 4.7.2) 
OS:                Linux

Mail transport is not rememeber for sent but failed mails

Reproducible: Always

Steps to Reproduce:
 * Send a mail with a mail transport different than the first one on the list
 * Make sending fail (e.g. you have no network)
 * The mail is kept on the outbox folder
 * Now double click on the mail
 * Observe how the mail transport is incorrectly set (seems to default to the first one here)

This is specially wrong becuase some mail transports instead of complaining they do not want to send an email with a To: that does not match the server, just silently eat the email.


Expected Results:  
The mail transport is remembered like it was in kmail1

OS: Linux (x86_64) release 3.0-ARCH
Compiler: gcc
Comment 1 Laurent Montel 2011-11-08 13:04:01 UTC
I confirm it.
Comment 2 Laurent Montel 2011-11-14 21:00:17 UTC
Git commit 523740f987dd42b556dd76109e1ce8207ac64ed4 by Montel Laurent.
Committed on 14/11/2011 at 21:59.
Pushed by mlaurent into branch 'master'.

Fix Bug 284789 - Does not remember mail transport

FIXED-IN: 4.7.4
BUG: 284789

M  +1    -1    kmail/composer.h
M  +7    -0    kmail/kmcommands.cpp
M  +5    -0    kmail/kmcomposewin.cpp
M  +2    -0    kmail/kmcomposewin.h

http://commits.kde.org/kdepim/523740f987dd42b556dd76109e1ce8207ac64ed4
Comment 3 Laurent Montel 2011-11-14 21:01:00 UTC
Git commit 75adfb58e54a1258dee59d933f3b7b4fdbc533fe by Montel Laurent.
Committed on 14/11/2011 at 21:59.
Pushed by mlaurent into branch 'KDE/4.7'.

Fix Bug 284789 - Does not remember mail transport

FIXED-IN: 4.7.4
BUG: 284789
(cherry picked from commit 523740f987dd42b556dd76109e1ce8207ac64ed4)

M  +1    -1    kmail/composer.h
M  +7    -0    kmail/kmcommands.cpp
M  +5    -0    kmail/kmcomposewin.cpp
M  +2    -0    kmail/kmcomposewin.h

http://commits.kde.org/kdepim/75adfb58e54a1258dee59d933f3b7b4fdbc533fe