Fix Bug 284789 - Does not remember mail transport

FIXED-IN: 4.7.4
BUG: 284789